[package]
name = "boss"
version = "0.0.4"

readme = "README.md"
description = "Baseball Open Source Software"

authors = ["Eli Ben-Porat <boss@ben-porat.com"]
edition = "2018"

license = "MIT"
documentation = "https://docs.rs/boss"
homepage = "https://docs.rs/boss"
repository = "https://github.com/elibenporat/boss"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "0.8"
csv = "1.1"
serde = {version = "1.0", features = ["derive"]}
rayon = "1.2"
serde_json = "1"
futures = "0.3"
regex = "1"

# This is just for development, remove when it's a working library
[profile.release]
opt-level = 3

[[bin]]
name = "boss"
path = "src/bin/test.rs"