[package]
name = "boss"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
csv = {version = "1.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rayon ="1.6"
regex = "1"